--- a/bailab12/css/style.css
+++ b/bailab12/css/style.css
@@ -3,6 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+h1{
+    color: orangered;
+    font-size: 100px;
+    text-align: center;
+    font-weight: bold;
+}
 .boxcenter{
     width: 90%;
     margin: 0 auto;
