--- a/bailab12/css/style.css
+++ b/bailab12/css/style.css
@@ -8,6 +8,7 @@ h1{
     font-size: 100px;
     text-align: center;
     font-weight: bold;
+    line-height: 300px;
 }
 .boxcenter{
     width: 90%;
